# bob-worker

./: .gitignore  README.md
bob/: Cargo.toml
bob/src/: db.rs  main.rs  utils.rs
bob/src/routes/: send_message.rs
container/: Dockerfile
